BUG: "Travel" button get more visible while hover
BUG: "Travel" button get more visible while hover

Fix: "Travel" button get font-weight: "bold" while hover on it and hence making it more visible

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -340,6 +340,7 @@ hr { border-top: 1px solid #111010; }
 }
 .tm-home-box-2-link:hover,
 .tm-home-box-2-link:focus {
+	font-weight: bold;
 	color: #FCDD44;
 }
 .border-left { border-left: 1px solid #DDD; }
